style.css
/* Init Declerations */
* {
	margin: 0px;
	padding: 0px;
	box-sizing: border-box;
	font-family: "Open Sans", sans-serif;
}

a {
	text-decoration: none;
}

li {
	list-style-type: none;
}

/* Containers */
.main-container {
	min-height: 100vh;
	background-color: #233D4D;
	/* Layout */
	display: flex;
	flex-direction: column;
}

header {
	background-color: black;
	/* Layout inside */
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
}

main {
	padding: 20px;
	/* Layout inside */
	display: flex;
	justify-content: space-around;
	flex-wrap: wrap;
}

section {
	margin: 20px;
	border-radius: 10px;
	flex-basis: 500px;
	background-color: #EAECF0;
	width: 30%;
	height: 600px;
	/* Layout inside  */
	display: flex;
	flex-direction: column;
	align-items: center;
	gap: 10px;
}

footer {
	flex: 1;
	background-color: #FE7F2D;
}

/* Others */

.title {
	color: white;
	padding: 20px;
	text-align: center;
}

section > a {
	font-weight: bold;
	color: black;
	padding: 10px;
	margin: 10px;
	background-color: white;
	border: 2px solid black;
	border-radius: 15px;
}

section > p {
	padding: 10px;
}

img {
	width: 400px;
	height: auto;
}

footer > ul {
	width: 100%;
	height: 100%;
	display: flex;
	justify-content: space-around;
	align-items: center;
}

